  the export of FMUs.
- development.regressiontest now also reports when Dymola
  had to select default initial conditions, 
  a model had redundant consistent initial conditions, or
  a model had type inconsistent definition equations.
- Corrected bug in simulate.Simulator that caused a syntax error
  in the Modelica .mos script when setting boolean variables.
  

Version 1.4.0, February 28, 2014 -- Release 1.4
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- In development.unittest, added test that addresses the situation
  that some results are parameters in the Buildings library, but
  variables in the Annex 60 library.
- In simulate.Simulator, corrected error that prevented output
  files from being copied if the result directory was set to '.'
- Added unit tests and documentation tests.
- Corrected various errors in the documentation.
- Renamed development.unittest to development.regressiontest. This
  was required for the python doctest to work.
- In development.regressiontest, added new method setLibraryRoot(rootDir)
  to allow running the unit tests from a directory other than the library
  root directory.
- In development.regressiontest, added a test that avoids an IndexError
  if a new simulation result contains a different number of support points
  than the reference result. This is needed if models change variables
  to parameters or vice versa.
- In development.regressiontest, added the method setSinglePackage.
  This allows running the regression tests for a single package only.


Version 1.3.0, October 24, 2013 -- Release 1.3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added class buildingspy.development.validator
  that can be used to validate the html syntax
  of the info section of .mo files.
- Added validation of html syntax to unit test script.
- In io.outputfile, changed name of argument of _init__
  from format to simulator as format is a reserved keyword
  in Python.