@@ -1,28 +1,32 @@
 #!/usr/bin/env python
 import unittest
-import os
-from buildingspy.io.postprocess import Plotter
-import numpy.testing
 
 class Test_example_dymola_runSimulation(unittest.TestCase):
     """
        This class contains the unit tests for
        :mod:`buildingspy.io.Plotter`.
     """
+    
     def setUp(self):
         '''
-        This method creates an environmental variable that points to an existing folder
+        This method creates a variable that points to an existing folder
         that contains a Modelica package.
         '''
-        os.environ["MODELICAPATH"] = os.path.abspath(os.path.join("buildingspy", "tests", "MyModelicaLibrary"))
-    
+        import os
+        self._oldWorDir = os.getcwd()
+        # Change to a directory that contains a package.mo file
+#        os.chdir(os.path.abspath(os.path.join("buildingspy", "tests", "MyModelicaLibrary")))
+        print "**************** PYTHONPATH =", os.getenv("PYTHONPATH", "not specified")
+
+
     def tearDown(self):
         '''
-        This method delete the environmental variable that points to an existing folder
-        that contains a Modelica package.
+        This method resets the current working directory
         '''
-        del(os.environ["MODELICAPATH"])
-        
+        import os
+        os.chdir(self._oldWorDir)
+    
+
     def test_runSimulation(self):
         '''
         Tests the :mod:`buildingspy/examples/dymola/runSimulation`
@@ -30,6 +34,7 @@ class Test_example_dymola_runSimulation(unittest.TestCase):
         '''
         import shutil
         import buildingspy.examples.dymola.runSimulation as s
+
         s.main()
         # Delete output directories
         shutil.rmtree('case1')
