@@ -8,27 +8,21 @@ class Test_simulate_Simulator(unittest.TestCase):
        This class contains the unit tests for
        :mod:`buildingspy.simulate.Simulator`.
     """
+        
     def setUp(self):
         '''
-        This method creates an environmental variable that points to an existing folder
+        This method creates a variable that points to an existing folder
         that contains a Modelica package.
         '''
-        os.environ["MODELICAPATH"] = os.path.abspath(os.path.join("buildingspy", "tests", "MyModelicaLibrary"))
-    
-    def tearDown(self):
-        '''
-        This method delete the environmental variable that points to an existing folder
-        that contains a Modelica package.
-        '''
-        del(os.environ["MODELICAPATH"])
-        
+        self._packagePath = os.path.abspath(os.path.join("buildingspy", "tests", "MyModelicaLibrary"))
+         
     def test_Constructor(self):
         '''
         Tests the :mod:`buildingspy.simulate.Simulator`
         constructor.
         '''
         self.assertRaises(ValueError, Simulator, 
-                          "myModelicaLibrary.myModel", "notSupported")
+                          "myModelicaLibrary.myModel", "notSupported", packagePath=self._packagePath)
         
         # Check that this path does not exists
         self.assertRaises(ValueError, Simulator, 
@@ -43,22 +37,25 @@ class Test_simulate_Simulator(unittest.TestCase):
         '''
         Tests the ``setPackagePath'' method.
         '''
-        s = Simulator("MyModelicaLibrary.MyModel", "dymola")
+        s = Simulator("MyModelicaLibrary.MyModel", "dymola", packagePath=self._packagePath)
         
-        # try to load a not existing path
+        # Try to load an existing path.
+        p=os.path.abspath(os.path.join("buildingspy", "tests", "MyModelicaLibrary"))
+        s.setPackagePath(p)
+
+        # Try to load a not existing path.
         self.assertRaises(ValueError, s.setPackagePath, "ThisIsAWrongPath")
         
     def test_addMethods(self):
         '''
         Tests the various add methods.
         '''
-        import os
         import numpy as np
 
         from buildingspy.io.outputfile import Reader
 
         
-        s = Simulator("MyModelicaLibrary.MyModel", "dymola")
+        s = Simulator("MyModelicaLibrary.MyModel", "dymola", packagePath=self._packagePath)
         s.addPreProcessingStatement("Advanced.StoreProtectedVariables:= true;")
         s.addPostProcessingStatement("Advanced.StoreProtectedVariables:= false;")
         s.addModelModifier('redeclare Modelica.Blocks.Sources.Step source(offset=-0.1, height=1.1, startTime=0.5)')
@@ -93,7 +90,7 @@ class Test_simulate_Simulator(unittest.TestCase):
         and the :mod:`buildingspy.simulate.Simulator.getParameters`
         functions.
         '''
-        s = Simulator("myPackage.myModel", "dymola")
+        s = Simulator("myPackage.myModel", "dymola", packagePath=self._packagePath)
         # Make sure values are added correctly
         s.addParameters({'PID.k': 1.0, 'valve.m_flow_nominal' : 0.1})
         self.assertEqual(sorted(s.getParameters()), [('PID.k', 1.0), ('valve.m_flow_nominal', 0.1)])
@@ -116,7 +113,7 @@ class Test_simulate_Simulator(unittest.TestCase):
         if os.path.exists(resultFile):
             os.remove(resultFile)
 
-        s = Simulator("MyModelicaLibrary.Examples.Constants", "dymola")
+        s = Simulator("MyModelicaLibrary.Examples.Constants", "dymola", packagePath=self._packagePath)
         s.addParameters({'const1.k' : [2, 3]})
         s.addParameters({'const2.k' : [[1.1, 1.2], [2.1, 2.2], [3.1, 3.2]]})
         s.addParameters({'const3.k' : 0})
@@ -149,7 +146,7 @@ class Test_simulate_Simulator(unittest.TestCase):
         if os.path.exists(resultFile):
             os.remove(resultFile)
 
-        s = Simulator("MyModelicaLibrary.Examples.BooleanParameters", "dymola")
+        s = Simulator("MyModelicaLibrary.Examples.BooleanParameters", "dymola", packagePath=self._packagePath)
         s.addParameters({'p1' : True})
         s.addParameters({'p2' : False})
         s.simulate()
